[lib]
proc-macro = true
path = "src/_lib.rs"

[package]
name = "inline_proc_macros"
version = "0.1.0"
authors = [
    "Nika Layzell <nika@thelayzells.com>",
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

proc-macro2 = "1.0.*"
quote = "1.0.*"
syn = { version = "1.0.*", features = ["full"] }

[dependencies.watt]
git = "https://github.com/danielhenrymantilla/watt"
branch = "non-static-wasm-runtime"

[features]
# Enable when generating docs
docs = []
# Enable nightly features (to enhance the generation of docs)
nightly-docs = ["docs"]

# Trace what the internals are doing, very helpful for debugging or understanding what is going on
trace-macros = []
