[package]
name = "downstream"
version = "0.1.0"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inline_proc_macros = { path = ".." }

[build-dependencies]
inline_proc_macros-build = { path = "../build" }

[package.metadata.inline_proc_macros]
in = "src/proc_macros.rs"
out = "$OUT_DIR/proc_macros.rs"

[workspace]
